--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="favicon.png"/>
+    <link rel="icon" href="/favicon.png"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta name="description" content="Administration panel"/>
     <link rel="manifest" href="/manifest.json"/>
     <title>Freematiq admin panel</title>
+    <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
         // MIT License
@@ -30,8 +31,9 @@
             }
         }(window.location))
     </script>
-    <script defer="defer" src="static/js/main.9c897dc5.js"></script>
-    <link href="static/css/main.bfd8ca5b.css" rel="stylesheet">
+    <!-- End Single Page Apps for GitHub Pages -->
+    <script defer="defer" src="/static/js/main.43f15e94.js"></script>
+    <link href="/static/css/main.bfd8ca5b.css" rel="stylesheet">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
