--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="/favicon.png"/>
+    <link rel="icon" href="favicon.png"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
     <meta name="description" content="Administration panel"/>
@@ -32,8 +32,8 @@
         }(window.location))
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
-    <script defer="defer" src="/static/js/main.6d012fe7.js"></script>
-    <link href="/static/css/main.bfd8ca5b.css" rel="stylesheet">
+    <script defer="defer" src="static/js/main.e57968cc.js"></script>
+    <link href="static/css/main.bfd8ca5b.css" rel="stylesheet">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
